log
Sat Mar 13 17:31:35 UTC 2021: 
 exercises.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
Sat Mar 13 21:36:47 UTC 2021: 
 exercises.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
exercises.c: In function ‘crearVector’:
exercises.c:79:11: error: incompatible types when returning type ‘Vector {aka struct <anonymous>}’ but ‘Vector * {aka struct <anonymous> *}’ was expected
    return vectorCreado;
           ^~~~~~~~~~~~
exercises.c:80:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
Sat Mar 13 21:36:53 UTC 2021: 
 exercises.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
exercises.c: In function ‘crearVector’:
exercises.c:79:11: error: incompatible types when returning type ‘Vector {aka struct <anonymous>}’ but ‘Vector * {aka struct <anonymous> *}’ was expected
    return vectorCreado;
           ^~~~~~~~~~~~
exercises.c:80:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
Sat Mar 13 21:37:13 UTC 2021: 
 exercises.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
exercises.c: In function ‘crearVector’:
exercises.c:79:11: error: incompatible types when returning type ‘Vector {aka struct <anonymous>}’ but ‘Vector * {aka struct <anonymous> *}’ was expected
    return vectorCreado;
           ^~~~~~~~~~~~
exercises.c:80:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
Sat Mar 13 21:37:17 UTC 2021: 
 exercises.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
exercises.c: In function ‘crearVector’:
exercises.c:77:16: error: ‘vectorCreado’ is a pointer; did you mean to use ‘->’?
    vectorCreado.capacidad = n;
                ^
                ->
exercises.c:78:16: error: ‘vectorCreado’ is a pointer; did you mean to use ‘->’?
    vectorCreado.datos = (int *) calloc(n, sizeof(int));
                ^
                ->
Compilation failed
Sat Mar 13 21:37:31 UTC 2021: 
 exercises.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
test.c: In function ‘crearVector’:
exercises.c:77:28: error: ‘vectorCreado’ is used uninitialized in this function [-Werror=uninitialized]
    vectorCreado->capacidad = n;
    ~~~~~~~~~~~~~~~~~~~~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
Sat Mar 13 21:37:39 UTC 2021: 
 exercises.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
exercises.c: In function ‘crearVector’:
exercises.c:79:11: error: incompatible types when returning type ‘Vector {aka struct <anonymous>}’ but ‘Vector * {aka struct <anonymous> *}’ was expected
    return *vectorCreado;
           ^~~~~~~~~~~~~
exercises.c:80:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
Sat Mar 13 21:37:47 UTC 2021: 
 exercises.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
test.c: In function ‘crearVector’:
exercises.c:77:28: error: ‘vectorCreado’ is used uninitialized in this function [-Werror=uninitialized]
    vectorCreado->capacidad = n;
    ~~~~~~~~~~~~~~~~~~~~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
Sat Mar 13 21:38:48 UTC 2021: 
 exercises.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
exercises.c: In function ‘crearVector’:
exercises.c:77:16: error: invalid type argument of ‘->’ (have ‘Vector {aka struct <anonymous>}’)
    vectorCreado->capacidad = n;
                ^~
exercises.c:78:16: error: invalid type argument of ‘->’ (have ‘Vector {aka struct <anonymous>}’)
    vectorCreado->datos = (int *) calloc(n, sizeof(int));
                ^~
exercises.c:79:11: error: incompatible types when returning type ‘Vector {aka struct <anonymous>}’ but ‘Vector * {aka struct <anonymous> *}’ was expected
    return vectorCreado;
           ^~~~~~~~~~~~
exercises.c:80:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
Sat Mar 13 21:38:59 UTC 2021: 
 exercises.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
exercises.c: In function ‘crearVector’:
exercises.c:77:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
Sat Mar 13 21:40:14 UTC 2021: 
 exercises.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 20/70
99d40bf
Sat Mar 13 21:43:44 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
fe2c3b6
Sat Mar 13 21:58:06 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
9824581
Sat Mar 13 22:00:03 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
ccde04c
Sat Mar 13 22:01:26 UTC 2021: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  2|5
total_score: 20/70
00922ab
Sat Mar 13 22:59:04 UTC 2021: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
c767f16
Sat Mar 13 23:02:22 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
bf8e796
Sat Mar 13 23:32:05 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
2b3a160
Sat Mar 13 23:32:22 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d4480e5
Sat Mar 13 23:36:41 UTC 2021: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|5
total_score: 20/70
a400d0e
Sun Mar 14 02:32:25 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
253813c
Sun Mar 14 02:32:41 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
991e834
Sun Mar 14 02:42:29 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
338c8e8
Sun Mar 14 02:43:01 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
e9fffe0
Mon Mar 15 15:58:55 UTC 2021: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  3|4
total_score: 30/70
23079e4
Mon Mar 15 16:09:05 UTC 2021: 
 exercises.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  4|3
total_score: 40/70
437e6d6
Mon Mar 15 16:16:39 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
60663b8
